--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -60,14 +60,17 @@ or
   {\tt BC} & Z & Barcode sequence identifying the sample \\
   {\tt BQ} & Z & Offset to base alignment quality (BAQ) \\
   {\tt BZ} & Z & Phred quality of the unique molecular barcode bases in the {\tt OX} tag \\
+  {\tt CB} & Z & Cell identifier \\
   {\tt CC} & Z & Reference name of the next hit \\
   {\tt CG} & B,I & BAM only: {\sf CIGAR} in BAM's binary encoding if (and only if) it consists of $>$65535 operators \\
   {\tt CM} & i & Edit distance between the color sequence and the color reference (see also {\tt NM}) \\
   {\tt CO} & Z & Free-text comments \\
   {\tt CP} & i & Leftmost coordinate of the next hit \\
   {\tt CQ} & Z & Color read base qualities \\
+  {\tt CR} & Z & Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}\\
   {\tt CS} & Z & Color read sequence \\
   {\tt CT} & Z & Complete read annotation tag, used for consensus annotation dummy features \\
+  {\tt CY} & Z & Phred quality of the cellular-barcode sequence in the {\tt CR} tag \\
   {\tt E2} & Z & The 2nd most likely base calls \\
   {\tt FI} & i & The index of segment in the template \\
   {\tt FS} & Z & Segment suffix \\
@@ -259,6 +262,22 @@ In the case of multiple unique molecular identifiers (e.g., one on each end of t
 Phred quality of the sample-barcode sequence in the {\tt BC} (or {\tt RT}) tag. 
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template. 
+
+\item[CB:Z:\tagvalue{str}]
+Cell identifier based on the cellular-barcode sequence ({\tt CR}) that may be optionally i) error corrected and ii) followed by a dash (`{\tt -}') and one or more alphanumeric characters to form an identifier.
+In the case of the cellular barcode ({\tt CR}) being based on multiple barcode sequences the recommended implementation concatenates all the (corrected or uncorrected) barcodes with a hyphen (`{\tt -}') between the different barcodes.
+Notwithstanding errors (e.g., sequencing), all reads from a single cell are expected to have the same {\tt CB} tag.
+
+\item[CR:Z:\tagvalue{sequence+}]
+Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores (optionally) stored in {\tt CY}.
+Notwithstanding errors (e.g., sequencing), all reads with the same {\tt CR} tag likely derive from the same cell.
+In the case of the cellular barcode being based on multiple barcode sequences the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
+
+\item[CY:Z:\tagvalue{qualities+}]
+Phred quality of the cellular-barcode sequence in the {\tt CR} tag.
+Same encoding as {\sf QUAL}, i.e., Phred score + 33.
+The lengths of the {\tt CY} and the {\tt CR} tags must match.
+In the case of the cellular barcode being based on multiple barcode sequences the recommended implementation concatenates all the quality strings with with spaces (`{\tt \textvisiblespace}') between the different strings.
 
 \item[MI:Z:\tagvalue{str}]
 Molecular Identifier. 
