--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -62,11 +62,12 @@ or
   {\tt CC} & Z & Reference name of the next hit \\
   {\tt CM} & i & Edit distance between the color sequence and the color reference (see also {\tt NM}) \\
   {\tt CO} & Z & Free-text comments \\
-  {\tt CR} & Z & Cellular barcode sequence as reported by the sequencer (uncorrected) with the respective quality scores stored in CY\\
   {\tt CP} & i & Leftmost coordinate of the next hit \\
   {\tt CQ} & Z & Color read base qualities \\
+  {\tt CR} & Z & Sequence bases of the cellular barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}\\
   {\tt CS} & Z & Color read sequence \\
   {\tt CT} & Z & Complete read annotation tag, used for consensus annotation dummy features \\
+  {\tt CY} & Z & Phred quality of the cellular-barcode sequence in the {\tt CR} tag \\
   {\tt E2} & Z & The 2nd most likely base calls \\
   {\tt FI} & i & The index of segment in the template \\
   {\tt FS} & Z & Segment suffix \\
@@ -97,16 +98,15 @@ or
   {\tt PU} & Z & Platform unit \\
   {\tt Q2} & Z & Phred quality of the mate/next segment sequence in the {\tt R2} tag \\
   {\tt QT} & Z & Phred quality of the sample-barcode sequence in the {\tt BC} (or {\tt RT}) tag \\
-  {\tt CY} & Z & Phred quality of the cellular-barcode sequence in the {\tt CR} tag \\
   {\tt QX} & Z & Quality score of the unique molecular identifier in the {\tt RX} tag \\
   {\tt R2} & Z & Sequence of the mate/next segment in the template \\
   {\tt RG} & Z & Read group \\
   {\tt RT} & Z & Barcode sequence (deprecated; use {\tt BC} instead) \\
   {\tt RX} & Z & Sequence bases of the (possibly corrected) unique molecular identifier \\
+  {\tt S2} & ? & Reserved for backwards compatibility reasons \\
   {\tt SA} & Z & Other canonical alignments in a chimeric alignment \\
   {\tt SM} & i & Template-independent mapping quality \\
   {\tt SQ} & ? & Reserved for backwards compatibility reasons \\
-  {\tt S2} & ? & Reserved for backwards compatibility reasons \\
   {\tt TC} & i & The number of segments in the template \\
   {\tt U2} & Z & Phred probability of the 2nd call being wrong conditional on the best being wrong \\
   {\tt UQ} & i & Phred likelihood of the segment, conditional on the mapping being correct \\
@@ -248,10 +248,41 @@ Barcode sequence (Identifying the sample/library), with any quality scores (opti
 The {\tt BC} tag should match the {\tt QT} tag in length. 
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the barcodes and places a hyphen (`{\tt -}') between the barcodes from the same template. 
 
+\item[BZ:Z:\tagvalue{qualities+}] 
+Phred quality of the (uncorrected) unique molecular identifier sequence in the {\tt OX} tag.
+Same encoding as {\sf QUAL}, i.e., Phred score + 33.
+The {\tt OX} tags should match the {\tt BZ} tag in length. 
+In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with a space (`{\tt \textvisiblespace}') between the different strings.
+
+\item[CR:Z:\tagvalue{str}]
+  Cellular barcode.
+  Sequence bases of the cellular barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}. All reads with the same {\tt CR} tag derive from the same cell. 
+
+\item[CY:Z:\tagvalue{qualities+}]
+Phred quality of the cellular barcode sequence in the {\tt CR} tag. 
+Same encoding as {\sf QUAL}, i.e., Phred score + 33.
+The lengths of the {\tt CY} and the {\tt CR} tags must match. 
+
+\item[MI:Z:\tagvalue{str}]
+Molecular Identifier. 
+A unique ID within the SAM file for the source molecule from which this read is derived. 
+All reads with the same {\tt MI} tag represent the group of reads derived from the same source molecule. 
+
+\item[OX:Z:\tagvalue{sequence+}] 
+Raw (uncorrected) unique molecular identifier bases, with any quality scores (optionally) stored in the {\tt BZ} tag. 
+In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
+
 \item[QT:Z:\tagvalue{qualities}] 
 Phred quality of the sample-barcode sequence in the {\tt BC} (or {\tt RT}) tag. 
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template. 
+
+\item[QX:Z:\tagvalue{qualities+}] 
+Phred quality of the unique molecular identifier sequence in the {\tt RX} tag. 
+Same encoding as {\sf QUAL}, i.e., Phred score + 33.
+The qualities here may have been corrected (Raw bases and qualities can be stored in {\tt OX} and {\tt BZ} respectively.)
+The lengths of the {\tt QX} and the {\tt RX} tags must match. 
+In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with a space (`{\tt \textvisiblespace}') between the different strings.
 
 \item[RX:Z:\tagvalue{sequence+}]
 Sequence bases from the unique molecular identifier. 
@@ -261,39 +292,10 @@ In the case of multiple unique molecular identifiers (e.g., one on each end of t
 
 If the bases represent corrected bases, the original sequence can be stored in {\tt OX} (similar to {\tt OQ} storing the original qualities of bases.)
 
-\item[QX:Z:\tagvalue{qualities+}] 
-Phred quality of the unique molecular identifier sequence in the {\tt RX} tag. 
-Same encoding as {\sf QUAL}, i.e., Phred score + 33.
-The qualities here may have been corrected (Raw bases and qualities can be stored in {\tt OX} and {\tt BZ} respectively.)
-The lengths of the {\tt QX} and the {\tt RX} tags must match. 
-In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with a space (`{\tt \textvisiblespace}') between the different strings.
-
-\item[MI:Z:\tagvalue{str}]
-Molecular Identifier. 
-A unique ID within the SAM file for the source molecule from which this read is derived. 
-All reads with the same {\tt MI} tag represent the group of reads derived from the same source molecule. 
-
-\item[CR:Z:\tagvalue{str}]
-Cellular barcode. 
-Cellular barcode sequence as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}. All reads with the same {\tt CR} tag derive from the same cell. 
-
-\item[CY:Z:\tagvalue{qualities+}] 
-Phred quality of the cellular barcode sequence in the {\tt CR} tag. 
-Same encoding as {\sf QUAL}, i.e., Phred score + 33.
-The lengths of the {\tt CY} and the {\tt CR} tags must match. 
-
-\item[OX:Z:\tagvalue{sequence+}] 
-Raw (uncorrected) unique molecular identifier bases, with any quality scores (optionally) stored in the {\tt BZ} tag. 
-In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
-
-\item[BZ:Z:\tagvalue{qualities+}] 
-Phred quality of the (uncorrected) unique molecular identifier sequence in the {\tt OX} tag.
-Same encoding as {\sf QUAL}, i.e., Phred score + 33.
-The {\tt OX} tags should match the {\tt BZ} tag in length. 
-In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with a space (`{\tt \textvisiblespace}') between the different strings.
-
 \item[RT:Z:\tagvalue{sequence}]
-Deprecated alternative to {\tt BC} tag originally used at Sanger.
+  Deprecated alternative to {\tt BC} tag originally used at Sanger.
+
+
 \end{description}
 
 \subsection{Original data}
