--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -49,6 +49,7 @@ may be one of
 or
 {\tt Z} (string).
 
+%% keep tags in this table sorted alphabetically
 \begin{center}\small
 \begin{longtable}{ccp{12.5cm}}
   \hline
@@ -277,13 +278,6 @@ Phred quality of the sample-barcode sequence in the {\tt BC} (or {\tt RT}) tag.
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template. 
 
-\item[QX:Z:\tagvalue{qualities+}] 
-Phred quality of the unique molecular identifier sequence in the {\tt RX} tag. 
-Same encoding as {\sf QUAL}, i.e., Phred score + 33.
-The qualities here may have been corrected (Raw bases and qualities can be stored in {\tt OX} and {\tt BZ} respectively.)
-The lengths of the {\tt QX} and the {\tt RX} tags must match. 
-In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with a space (`{\tt \textvisiblespace}') between the different strings.
-
 \item[RX:Z:\tagvalue{sequence+}]
 Sequence bases from the unique molecular identifier. 
 These could be either corrected or uncorrected. Unlike {\tt MI}, the value may be non-unique in the file. 
@@ -291,6 +285,13 @@ Should be comprised of a sequence of bases.
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
 
 If the bases represent corrected bases, the original sequence can be stored in {\tt OX} (similar to {\tt OQ} storing the original qualities of bases.)
+
+\item[QX:Z:\tagvalue{qualities+}] 
+Phred quality of the unique molecular identifier sequence in the {\tt RX} tag. 
+Same encoding as {\sf QUAL}, i.e., Phred score + 33.
+The qualities here may have been corrected (Raw bases and qualities can be stored in {\tt OX} and {\tt BZ} respectively.)
+The lengths of the {\tt QX} and the {\tt RX} tags must match. 
+In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with a space (`{\tt \textvisiblespace}') between the different strings.
 
 \item[RT:Z:\tagvalue{sequence}]
   Deprecated alternative to {\tt BC} tag originally used at Sanger.
