--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -1274,15 +1274,15 @@ Examples:
 \vspace{0.3cm}
 \small
 \begin{tabular}{|p{2.5cm} | p{10cm} | p{3cm}|} \hline
-0/1 & in standard format $(0 + 1) << 1 \mid 0$ followed by $(1 + 1) << 1 \mid 0$ & 0x02 0x04 \\ \hline
-0/1, 1/1, and 0/0 & three samples encoded consecutively & 0x020404040202 \\ \hline
-$0\mid1$ & $(1 + 1) << 1 \mid 1$ = 0x05 preceded by the standard first byte value 0x04 & 0x0405 \\ \hline
-./. & where both alleles are missing & 0x00 0x00 \\ \hline
+0/1 & in standard format $(0 + 1) << 1 \mid 0$ followed by $(1 + 1) << 1 \mid 0$ & 0x02 04 \\ \hline
+0/1, 1/1, and 0/0 & three samples encoded consecutively & 0x02 04 04 04 02 02 \\ \hline
+$0\mid1$ & $(1 + 1) << 1 \mid 1$ = 0x05 preceded by the standard first byte value 0x02 & 0x02 05 \\ \hline
+./. & where both alleles are missing & 0x00 00 \\ \hline
 0 & as a haploid it is represented by a single byte & 0x02 \\ \hline
 1 & as a haploid it is represented by a single byte & 0x04 \\ \hline
-0/1/2 & is tetraploid, with alleles & 0x02 0x04 0x06 \\ \hline
-$0/1\mid2$ & is tetraploid with a single phased allele & 0x02 0x04 0x07 \\ \hline
-0 and 0/1 & pad out the final allele for the haploid individual & 0x04 0x80 0x02 0x04\\ \hline
+0/1/2 & is tetraploid, with alleles & 0x02 04 06 \\ \hline
+$0/1\mid2$ & is tetraploid with a single phased allele & 0x02 04 07 \\ \hline
+0 and 0/1 & pad out the final allele for the haploid individual & 0x02 80 02 04\\ \hline
 \end{tabular}
 \normalsize
 
