--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -1176,7 +1176,7 @@ specification with its own version numbering.\footnote{
 \item Add {\tt RG PG} header field. (Nov 2010)
 \item Add BAM description and index sections. (Nov 2010)
 \item \textbf{Removal of FLAG letters.} (July 2010)
-\item Change {\tt @RG SM} header tag to not be required. (July 2010)
+\item The {\tt SM} header field, previously mandatory for {\tt @RG}, is now optional. (July 2010)
 \end{itemize}
 
 \subsection*{1.0: 2009 to July 2010}
