Changed gVCF format broken link

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1253,7 +1253,7 @@ Haplotype quality & 30 & 40 & 40 \\
 \subsection{Representing unspecified alleles and REF-only blocks (gVCF)}
 In order to report sequencing data evidence for both variant and non-variant
 positions in the genome, the VCF specification allows to represent blocks of reference-only calls in a single record
-using the END INFO tag, an idea originally introduced by the gVCF file format\footnote{\url{https://support.basespace.illumina.com/knowledgebase/articles/147078-gvcf-file}}.
+using the END INFO tag, an idea originally introduced by the gVCF file format\footnote{\url{https://help.basespace.illumina.com/articles/descriptive/gvcf-files/}}.
 The convention adopted here is to represent reference evidence as likelihoods against an
 unknown alternate allele. Think of this as the likelihood for reference as compared to any other possible alternate
 allele (both SNP, indel, or otherwise). A symbolic alternate allele $<$*$>$
