Removed - The respective quality scores are (optionally) stored in.

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -259,8 +259,7 @@ In the case of multiple unique molecular identifiers (e.g., one on each end of t
   Cell identifier based on the (possibly corrected) cellular-barcode
   sequence ({\tt CR}). The sequence may optionally be followed by a
   dash (`{\tt -}') and one or more alphanumeric characters to form an
-  identifier. The respective quality scores are (optionally) stored in
-  the {\tt CY} tag. All reads with the same {\tt CB} tag putatively
+  identifier. All reads with the same {\tt CB} tag putatively
   derive from the same cell.
 
 \item[CR:Z:\tagvalue{str}]
