CY - do not mention CB

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -263,7 +263,7 @@ In the case of the cell identifier being based on multiple cellular-barcode sequ
 Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}. All reads with the same {\tt CR} tag putatively derive from the same cell. 
 
 \item[CY:Z:\tagvalue{qualities+}] 
-Phred quality of the cellular-barcode sequence in the {\tt CB} (or {\tt CR}) tag. 
+Phred quality of the cellular-barcode sequence in the {\tt CR} tag. 
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 The lengths of the {\tt CY} and the {\tt CR} tags must match. 
   
